# xsd

./: LICENSE  README.md  default.nix  xml-conduit-decode.nix  xsd.cabal  xsd.nix
src/: Example.hs
src/Text/XML/: Attrs.hs  Base64Binary.hs  Boolean.hs  Date.hs  DateTime.hs  Decimal.hs  Double.hs  Float.hs  HexBinary.hs  ID.hs  Language.hs  NCName.hs  NonNegative.hs  QName.hs  Regex.hs  Time.hs  Token.hs  URI.hs  XSD.hs
src/Text/XML/Numbers/: Sign.hs
src/Text/XML/XSD/: Attribute.hs  AttributeGroup.hs  Block.hs  ComplexType.hs  Component.hs  Element.hs  Final.hs  Form.hs  Group.hs  Lens.hs  Namespace.hs  Notation.hs  ProcessContents.hs  Schema.hs  Sequence.hs  SimpleType.hs  Types.hs  Validate.hs  Validation.hs  XMLRep.hs
src/Text/XML/XSD/Component/: Attribute.hs  AttributeGroup.hs  Builtins.hs  ComplexType.hs  ConstrainingFacet.hs  Element.hs  FundamentalFacet.hs  FundamentalFacets.hs  IdentityConstraint.hs  Internal.hs  ModelGroup.hs  Notation.hs  Particle.hs  Schema.hs  SimpleType.hs  Wildcard.hs
src/Text/XML/XSD/Internal/: Lenses.hs  Types.hs
src/Text/XML/XSD/Types/: Base64Binary.hs  Boolean.hs  Date.hs  DateTime.hs  Decimal.hs  Double.hs  Duration.hs  Float.hs  HexBinary.hs  ID.hs  Language.hs  NCName.hs  NonNegative.hs  NonNegativeInteger.hs  Positive.hs  PositiveInteger.hs  QName.hs  Regex.hs  Time.hs  Token.hs  URI.hs
src/Text/XML/XSD/Types/Numbers/: Sign.hs
src/Text/XML/XSD/Validate/: Builtins.hs  Monad.hs  SimpleType.hs
src/Text/XML/XSD/Validation/: Attribute.hs  AttributeGroup.hs  Builtins.hs  ComplexType.hs  ConstrainingFacet.hs  Element.hs  FundamentalFacets.hs  IdentityConstraint.hs  Internal.hs  ModelGroup.hs  Monad.hs  Notation.hs  Particle.hs  Schema.hs  SimpleType.hs  Wildcard.hs
src/Text/XML/XSD/XMLRep/: Attribute.hs  AttributeGroup.hs  ComplexType.hs  ConstrainingFacet.hs  Element.hs  Group.hs  Notation.hs  Schema.hs  Sequence.hs  SimpleType.hs
src/Text/XML/XSD/XMLRep/Fields/: Block.hs  Final.hs  Form.hs  Namespace.hs  ProcessContents.hs
src/Text/XML/XSD/XMLRep/Internal/: Lenses.hs  Types.hs
test/examples/: simple.xsd  simple_0.xsd
