name:                 xsd
version:              0.5.0.1
license:              BSD3
license-file:         LICENSE
author:               Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:           Queensland Functional Programming Lab <haskell@qfpl.io>
copyright:            2010-2017 Tony Morris, Stefan Wehr, 2017 Data61 / CSIRO
synopsis:             XML Schema data structures
category:             XML
description:          XML Schema data structures (XSD)
homepage:             https://github.com/data61/xsd
bug-reports:          https://github.com/data61/xsd/issues
cabal-version:        >= 1.10
build-type:           Custom
extra-source-files:   ChangeLog

source-repository     head
  type:               git
  location:           git@github.com:data61/xsd.git

flag                  small_base
  description:        Choose the new, split-up base package.

library
  default-language:
                      Haskell2010

  build-depends:      base < 5 && >= 4.5
                      , attoparsec
                      , bytestring
                      , base64-bytestring
                      , case-insensitive
                      , containers
                      , lens
                      , network-uri
                      , parsers
                      , pretty
                      , regex
                      , text 
                      , template-haskell >= 2.11
                      , time
                      , xml-conduit
                      , xml-lens

  ghc-options:
                      -Wall

  default-extensions:
                      NoImplicitPrelude

  hs-source-dirs:
                      src

  other-modules:      Text.XML.Numbers.Sign
  exposed-modules:    Example
                      Text.XML.Attrs
                      Text.XML.Base64Binary
                      Text.XML.Boolean
                      Text.XML.Date
                      Text.XML.Decimal
                      Text.XML.Double
                      Text.XML.Float
                      Text.XML.HexBinary
                      Text.XML.ID
                      Text.XML.Language
                      Text.XML.NCName
                      Text.XML.NonNegative
                      Text.XML.QName
                      Text.XML.Regex
                      Text.XML.Time
                      Text.XML.Token
                      Text.XML.XSD
                      Text.XML.XSD.Attribute
                      Text.XML.XSD.AttributeGroup
                      Text.XML.XSD.DateTime
                      Text.XML.XSD.Block
                      Text.XML.XSD.ComplexType
                      Text.XML.XSD.Element
                      Text.XML.XSD.Final
                      Text.XML.XSD.Form
                      Text.XML.XSD.Group
                      Text.XML.XSD.Lens
                      Text.XML.XSD.Namespace
                      Text.XML.XSD.Notation
                      Text.XML.XSD.ProcessContents
                      Text.XML.XSD.Schema
                      Text.XML.XSD.Sequence
                      Text.XML.XSD.SimpleType
                      Text.XML.XSD.Types

test-suite doctests
  type:
                      exitcode-stdio-1.0

  main-is:
                      doctests.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , template-haskell >= 2.8
                      , quickcheck-instances >= 0.3

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test
