name:                 xsd
version:              0.5.0.1
license:              BSD3
license-file:         LICENSE
author:               Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:           Queensland Functional Programming Lab <haskell@qfpl.io>
copyright:            2010-2017 Tony Morris, Stefan Wehr, 2017 Data61 / CSIRO
synopsis:             XML Schema data structures
category:             XML
description:          XML Schema data structures (XSD)
homepage:             https://github.com/data61/xsd
bug-reports:          https://github.com/data61/xsd/issues
cabal-version:        >= 1.10
build-type:           Custom
extra-source-files:   ChangeLog

source-repository     head
  type:               git
  location:           git@github.com:data61/xsd.git

flag                  small_base
  description:        Choose the new, split-up base package.

library
  default-language:
                      Haskell2010

  build-depends:      base < 5 && >= 4.5
                      , attoparsec
                      , bytestring
                      , base64-bytestring
                      , case-insensitive
                      , containers
                      , mtl
                      , lens
                      , network-uri
                      , parsers
                      , pretty
                      , profunctors
                      , regex
                      , text 
                      , template-haskell >= 2.11
                      , time
                      , xml-conduit
                      , xml-lens

  ghc-options:
                      -Wall

  default-extensions:
                      NoImplicitPrelude

  hs-source-dirs:
                      src

  other-modules:
                      Text.XML.XSD.Validation.Internal
                      Text.XML.XSD.XMLRep.Internal.Lenses
                      Text.XML.XSD.XMLRep.Internal.Types
                      Text.XML.XSD.Types.Numbers.Sign

  exposed-modules:    Example
                      Text.XML.Attrs
                      Text.XML.XSD
                      Text.XML.XSD.Types
                      Text.XML.XSD.Types.Base64Binary
                      Text.XML.XSD.Types.Boolean
                      Text.XML.XSD.Types.Date
                      Text.XML.XSD.Types.DateTime
                      Text.XML.XSD.Types.Decimal
                      Text.XML.XSD.Types.Double
                      Text.XML.XSD.Types.Duration
                      Text.XML.XSD.Types.Float
                      Text.XML.XSD.Types.HexBinary
                      Text.XML.XSD.Types.ID
                      Text.XML.XSD.Types.Language
                      Text.XML.XSD.Types.NCName
                      Text.XML.XSD.Types.NonNegativeInteger
                      Text.XML.XSD.Types.PositiveInteger
                      Text.XML.XSD.Types.QName
                      Text.XML.XSD.Types.Regex
                      Text.XML.XSD.Types.Time
                      Text.XML.XSD.Types.Token
                      Text.XML.XSD.XMLRep
                      Text.XML.XSD.XMLRep.Attribute
                      Text.XML.XSD.XMLRep.AttributeGroup
                      Text.XML.XSD.XMLRep.ComplexType
                      Text.XML.XSD.XMLRep.ConstrainingFacet
                      Text.XML.XSD.XMLRep.Element
                      Text.XML.XSD.XMLRep.Fields.Block
                      Text.XML.XSD.XMLRep.Fields.Final
                      Text.XML.XSD.XMLRep.Fields.Form
                      Text.XML.XSD.XMLRep.Fields.Namespace
                      Text.XML.XSD.XMLRep.Fields.ProcessContents
                      Text.XML.XSD.XMLRep.Group
                      Text.XML.XSD.XMLRep.Notation
                      Text.XML.XSD.XMLRep.Schema
                      Text.XML.XSD.XMLRep.Sequence
                      Text.XML.XSD.XMLRep.SimpleType
                      Text.XML.XSD.Validation
                      Text.XML.XSD.Validation.Attribute
                      Text.XML.XSD.Validation.AttributeGroup
                      Text.XML.XSD.Validation.Builtins
                      Text.XML.XSD.Validation.ComplexType
                      Text.XML.XSD.Validation.ConstrainingFacet
                      Text.XML.XSD.Validation.Element
                      Text.XML.XSD.Validation.FundamentalFacets
                      Text.XML.XSD.Validation.IdentityConstraint
                      Text.XML.XSD.Validation.Monad
                      Text.XML.XSD.Validation.Notation
                      Text.XML.XSD.Validation.Schema
                      Text.XML.XSD.Validation.SimpleType

test-suite doctests
  type:
                      exitcode-stdio-1.0

  main-is:
                      doctests.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , template-haskell >= 2.8
                      , quickcheck-instances >= 0.3

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test
